[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlhaus-threat-intel-pipeline"
version = "1.1.0"
description = "A real-world URLhaus threat-intelligence data pipeline with feature engineering and ML anomaly scoring."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Huy Vu"}]
keywords = ["cybersecurity", "threat-intelligence", "urlhaus", "data-engineering", "machine-learning", "anomaly-detection"]
dependencies = [
  "pandas>=2.2.0,<3.0.0",
  "requests>=2.31.0,<3.0.0",
  "scikit-learn>=1.4.0,<2.0.0",
  "joblib>=1.3.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[project.scripts]
urlhaus-ti = "urlhaus_threat_intel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
